# ITPFinalProject

./: .gitignore  CMakeLists.txt  PatchNotes.md  README.md  database.c  database.h
Algumas tabelas já prontas/: database.txt
headers_files/: aux_functions.h  data.h  database.h  file_operations.h  table.h
include/: data.h  database.h  fileOperations.h  file_operations.h  row.h  table.h  userInteraction.h  utils.h  utilsFileOperations.h  utilsTable.h  utils_file_operations.h
src/: aux_functions.c  data.c  database.c  fileOperations.c  file_operations.c  main.c  row.c  table.c  tests.c  userInteraction.c  utils.c  utilsFileOperations.c  utilsTable.c  utils_file_operations.c
unitTests/: tests.c
unitTests/includeTests/: testFileOperations.h  testUtils.h
unitTests/srcTests/: createTestFiles.c  testFileOperations.c  testUtils.c
